08/24/18
  -getBytes returns the status as well as the packet data

08/23/18
  -Connection serial number now generated in ForwardOpen

07/21/18
  -Fixed bools that are part of an array with MultiRead. Ex MyBool[0]

07/18/18
  -Fixed reading bits of a word with MultiRead.  Ex: DintTag.0

06/03/18
  -Fixed issues handling CIP error codes
  -Fixed issue when mixing Read with MultiRead
  
04/08/18
  -Increased default socket timeout

10/23/17
  -Raise error for unsupported features

10/06/17
  -Added Micro8xx support
  -Cleaned up formatting of lgxDevice.py
  
10/05/17
  -Added array writing
  -Forward Open/Close cleanup

09/29/17
  -Rewrote reply parser to handle bit/bool arrays

06/06/17
  -Specify max timeout when discovering devices
  
06/04/17
  -Fixed multiread not dealing with strings properly
  
03/21/17
  -Fixed GetTagList() appending program scoped tags

03/17/17
  -Fixed GetTagList() appending every time it is called
  
02/17/17
  -Updated InitialRead usage
  -Found a few more formatting issues

02/12/17
  -Cleaned up _connect() and it's usage

02/11/17
  -Fixed CIP type for LINT, changed to signed
  -Cleaned up some formatting issues
  -Fixed crash on a read/write after a multi-packet reply
  -Modified InitialRead() to raise exception if tag doesn't exist

02/06/17
  -Use a different attribute in GetPLCTime()
  -Added SetPLCTime() to set the PLC clock

11/23/16
  -GetTagList() now includes program scoped tags

11/21/16
  -Rewrote GetTagList() to be more efficient, uses connected send

11/16/16
  -Fixed crash if GetTagList() was called twice

10/29/16
  -Fixed derp with _connect in _multiRead()
  
10/27/16
  -Added .Close() to close the session with the PLC. Whenever a script is done
    .Close() should be called.
  -Added __exit__() so PLC can be used in a with statement

10/26/16
  -Added _getBytes() for sending/receiving data.  Should handle failure better
  -Rewrote _connect() to handle disconnect/reconnects better

08/17/16