@@ -1,5 +1,5 @@
 ****************************************
-USAGE - Python 2.7.11
+USAGE - Python 2.7.x or 3.5.x
 ****************************************
 
 1) from eip import PLC
